# easyscan

./: .gitignore  CMakeLists.txt  README.md  Session.vim  easyscan.ipynb  package.xml
config/: ost0.yaml  ost1.yaml
include/easyscan/: util.h
launch/: calibrate.launch  calibrate_camera0.launch  calibrate_camera0.sh  calibrate_camera1.launch  calibrate_camera1_QRcode.launch  calibrate_laser_plane.launch  camera.launch  nvidia_camera.launch
rviz/: urdf.rviz
script/: calibrate_camera1_QRcode.py  calibrate_from_folder.py  calibrate_laser_plane.py  generate_points_cloud.py  laser_constructor.py  laser_process.py  localize_QRcode.py  pub_image.py
src/: calibrate.cpp  camera.cpp  camera_node.cpp  nvidia_camera_node.cpp  process.cpp  take_photos.cpp  util.cpp
